[metadata]
name = oio
summary = OpenIO SDS
author = OpenIO

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    oio
scripts =
    bin/oio-account-server
    bin/oio-rdir-server
    bin/oio-event-agent
    bin/oio-blob-auditor
    bin/oio-blob-mover
    bin/oio-blob-indexer
    bin/oio-blob-rebuilder
    bin/oio-conscience-agent

[entry_points]
oio.conscience.checker =
    http = oio.conscience.checker.http:HttpChecker
    tcp = oio.conscience.checker.tcp:TcpChecker
